--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "lupin.js",
+  "name": "IEEEeee",
   "version": "0.0.1",
-  "description": "jQuery plugin",
-  "main": "lupin.min.js",
-  "repository": "https://github.com/muyuu/lupin",
+  "description": "search support property html css js for IE",
+  "repository": "https://github.com/muyuu/IEEEeee",
   "author": "muyuu",
-  "homepage": "http://labs.anticyb.org/",
-  "license": "BSD",
+  "homepage": "http://anticyb.org/",
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.5",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-jade": "~0.8.0",
-    "grunt-contrib-sass": "~0.5.0"
+    "grunt-contrib-jshint": "~0.7.1",
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-uglify": "~0.2.5",
+    "grunt-este-watch": "~0.1.15",
+    "load-grunt-tasks": "~0.2.1"
   }
 }
