--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "homepage": "http://anticyb.org/",
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-bower-task": "~0.3.4",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-jade": "~0.8.0",
